# peanut_butter_jelly

./: .gitignore  MANIFEST.in  README.md  STANDARDIZED_INTERFACE.md  config.json  config.yaml  continue_pipeline.py  data_cleaner.py  example.py  example_cleaning.py  example_pbj.py  markdown_enhancer.py  pdf_processor.py  pipeline_complete.py  pipeline_results_1750553925.json  pipeline_results_1750556178.json  pipeline_results_1750557083.json  pyproject.toml  requirements.txt  sandwich.py  setup.py  test_chunking.py  test_new_structure.py
config/: data_cleaner_prompts.txt  markdown_enhancer_prompts.txt  pdf_processor_prompts.txt  pdf_system_prompt.txt  pdf_user_prompt.txt
src/pbj/: __init__.py  butter.py  config.py  jelly.py  peanut.py  sandwich.py  toast.py
src/pbj/pantry/: butter.txt  jelly.txt  nut.txt  pea.txt
