[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbj-pipeline"
version = "1.0.0"
description = "A Python RAG document processing pipeline that combines PDF parsing, markdown enhancement, JSON extraction, and format conversion"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dylan Hubert", email = "dylan@example.com"}
]
maintainers = [
    {name = "Dylan Hubert", email = "dylan@example.com"}
]
keywords = ["pdf", "rag", "document-processing", "llamaparse", "openai", "markdown", "json"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "llama-parse==0.6.35",
    "python-dotenv==1.0.1",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
    "openai==1.3.7",
    "PyYAML==6.0.1",
    "httpx==0.24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dylanhubert/pbj-pipeline"
Repository = "https://github.com/dylanhubert/pbj-pipeline"
Documentation = "https://github.com/dylanhubert/pbj-pipeline#readme"
Issues = "https://github.com/dylanhubert/pbj-pipeline/issues"

[project.scripts]
pbj = "pbj.sandwich:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pbj = ["pantry/*.txt"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 